[package]
name = "electrs"
version = "0.4.1"
authors = ["Roman Zeyde <me@romanzey.de>"]
description = "An efficient re-implementation of Viacoin Electrum Server in Rust"
license = "MIT"
homepage = "https://github.com/viacoin/electrs"
repository = "https://github.com/viacoin/electrs"
keywords = ["viacoin", "bitcoin", "electrum", "server", "index", "database"]
documentation = "https://docs.rs/electrs/"
readme = "README.md"

[dependencies]
arrayref = "0.3"
base64 = "0.9"
bincode = "1.0"
viacoin-bech32 = "0.8.0"
chan = "0.1"
chan-signal = "0.3"
clap = "2.31"
dirs = "1.0"
error-chain = "0.12"
glob = "0.2"
hex = "0.3"
libc = "0.2"
log = "0.4"
lru = "0.1"
num_cpus = "1.0"
page_size = "0.4"
prometheus = "0.4"
rocksdb = "0.10.1"
rust-crypto = "0.2"
secp256k1 = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
stderrlog = "0.4.1"
sysconf = ">=0.3.4"
time = "0.1"
tiny_http = "0.6"
hyper = "0.12"
url = "1.0"
lru-cache = "0.1.1"

[dependencies.viacoin]
git = "https://github.com/viacoin/rust-viacoin"
version = "0.15.1"
features = ["serde"]
